temporal features processing

--- a/data_preparation/data_preparation.ipynb
+++ b/data_preparation/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "8551b295",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,16 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5dd5ae16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Specify the data folder\n",
     "data_folder = \"./../original_data\"\n",
     "\n",
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "07d471fa",
    "metadata": {},
    "outputs": [],
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "bfd53fcb",
    "metadata": {},
    "outputs": [],
@@ -71,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "807b56cc",
    "metadata": {},
    "outputs": [],
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "4cda9067",
    "metadata": {},
    "outputs": [],
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "97d3bed7",
    "metadata": {},
    "outputs": [],
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "47b91566",
    "metadata": {},
    "outputs": [],
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "c9d04459",
    "metadata": {
     "vscode": {
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "7e7160d1",
    "metadata": {},
    "outputs": [],
@@ -266,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "e1ee6761",
    "metadata": {},
    "outputs": [],
@@ -322,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "9a40994b",
    "metadata": {},
    "outputs": [
@@ -735,7 +745,7 @@
        "[2816 rows x 31 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "745389b1",
    "metadata": {},
    "outputs": [],
@@ -1034,6 +1044,475 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5a86543",
+   "metadata": {},
+   "source": [
+    "# Temporal features standarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8b516d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day_of_the_week = {'Mon':0, 'Tue':1, 'Wed':2, 'Thu':3, 'Fri':4, 'Sat':5, 'Sun':6}\n",
+    "games_df['day'] = games_df['day'].map(day_of_the_week)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0033aa91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "N = 7\n",
+    "days = games_df['day'].values\n",
+    "# Compute sine and cosine components\n",
+    "days_sin = np.sin(2 * np.pi * days / N)\n",
+    "days_cos = np.cos(2 * np.pi * days / N)\n",
+    "games_df['day_sin'] = days_sin\n",
+    "games_df['day_cos'] = days_cos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b589a858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month = {'September': 0, 'October': 1, 'November': 2, 'December': 3, 'January': 4}\n",
+    "games_df['day'] = games_df['day'].map(month)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "e91e2eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = games_df['date'].str.split(' ', expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "99a00813",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0\n",
+       "December     775\n",
+       "October      684\n",
+       "November     677\n",
+       "September    600\n",
+       "January       80\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[0].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6043b199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>week</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>tie</th>\n",
+       "      <th>day</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>home_team_name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>home_team_wins_last_3</th>\n",
+       "      <th>away_team_wins_last_3</th>\n",
+       "      <th>pts_home</th>\n",
+       "      <th>pts_away</th>\n",
+       "      <th>yds_home</th>\n",
+       "      <th>yds_away</th>\n",
+       "      <th>turnovers_home</th>\n",
+       "      <th>turnovers_away</th>\n",
+       "      <th>day_sin</th>\n",
+       "      <th>day_cos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cincinnati Bengals</td>\n",
+       "      <td>Denver Broncos</td>\n",
+       "      <td>Denver Broncos</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>September 13</td>\n",
+       "      <td>1:02PM</td>\n",
+       "      <td>Bengals</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>307</td>\n",
+       "      <td>302</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cleveland Browns</td>\n",
+       "      <td>Minnesota Vikings</td>\n",
+       "      <td>Minnesota Vikings</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>September 13</td>\n",
+       "      <td>1:03PM</td>\n",
+       "      <td>Browns</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>34</td>\n",
+       "      <td>268</td>\n",
+       "      <td>310</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tampa Bay Buccaneers</td>\n",
+       "      <td>Dallas Cowboys</td>\n",
+       "      <td>Dallas Cowboys</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>September 13</td>\n",
+       "      <td>1:03PM</td>\n",
+       "      <td>Buccaneers</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21</td>\n",
+       "      <td>34</td>\n",
+       "      <td>450</td>\n",
+       "      <td>462</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>San Francisco 49ers</td>\n",
+       "      <td>San Francisco 49ers</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>September 13</td>\n",
+       "      <td>1:15PM</td>\n",
+       "      <td>Cardinals</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>299</td>\n",
+       "      <td>203</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Indianapolis Colts</td>\n",
+       "      <td>Jacksonville Jaguars</td>\n",
+       "      <td>Indianapolis Colts</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>September 13</td>\n",
+       "      <td>1:02PM</td>\n",
+       "      <td>Colts</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>365</td>\n",
+       "      <td>228</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2811</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Los Angeles Rams</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>Los Angeles Rams</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>December 29</td>\n",
+       "      <td>4:25PM</td>\n",
+       "      <td>Rams</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>24</td>\n",
+       "      <td>424</td>\n",
+       "      <td>393</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2812</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Baltimore Ravens</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Baltimore Ravens</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>December 29</td>\n",
+       "      <td>4:25PM</td>\n",
+       "      <td>Ravens</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>10</td>\n",
+       "      <td>304</td>\n",
+       "      <td>168</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2813</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Seattle Seahawks</td>\n",
+       "      <td>San Francisco 49ers</td>\n",
+       "      <td>San Francisco 49ers</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>December 29</td>\n",
+       "      <td>8:20PM</td>\n",
+       "      <td>Seahawks</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>348</td>\n",
+       "      <td>398</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2814</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Houston Texans</td>\n",
+       "      <td>Tennessee Titans</td>\n",
+       "      <td>Tennessee Titans</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>December 29</td>\n",
+       "      <td>4:25PM</td>\n",
+       "      <td>Texans</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>35</td>\n",
+       "      <td>301</td>\n",
+       "      <td>467</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2815</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Minnesota Vikings</td>\n",
+       "      <td>Chicago Bears</td>\n",
+       "      <td>Chicago Bears</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>December 29</td>\n",
+       "      <td>1:00PM</td>\n",
+       "      <td>Vikings</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>300</td>\n",
+       "      <td>337</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.62349</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2816 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year  week             home_team             away_team  \\\n",
+       "0     2009     1    Cincinnati Bengals        Denver Broncos   \n",
+       "1     2009     1      Cleveland Browns     Minnesota Vikings   \n",
+       "2     2009     1  Tampa Bay Buccaneers        Dallas Cowboys   \n",
+       "3     2009     1     Arizona Cardinals   San Francisco 49ers   \n",
+       "4     2009     1    Indianapolis Colts  Jacksonville Jaguars   \n",
+       "...    ...   ...                   ...                   ...   \n",
+       "2811  2019    17      Los Angeles Rams     Arizona Cardinals   \n",
+       "2812  2019    17      Baltimore Ravens   Pittsburgh Steelers   \n",
+       "2813  2019    17      Seattle Seahawks   San Francisco 49ers   \n",
+       "2814  2019    17        Houston Texans      Tennessee Titans   \n",
+       "2815  2019    17     Minnesota Vikings         Chicago Bears   \n",
+       "\n",
+       "                   winner  tie  day          date    time home_team_name  ...  \\\n",
+       "0          Denver Broncos  NaN    6  September 13  1:02PM        Bengals  ...   \n",
+       "1       Minnesota Vikings  NaN    6  September 13  1:03PM         Browns  ...   \n",
+       "2          Dallas Cowboys  NaN    6  September 13  1:03PM     Buccaneers  ...   \n",
+       "3     San Francisco 49ers  NaN    6  September 13  1:15PM      Cardinals  ...   \n",
+       "4      Indianapolis Colts  NaN    6  September 13  1:02PM          Colts  ...   \n",
+       "...                   ...  ...  ...           ...     ...            ...  ...   \n",
+       "2811     Los Angeles Rams  NaN    6   December 29  4:25PM           Rams  ...   \n",
+       "2812     Baltimore Ravens  NaN    6   December 29  4:25PM         Ravens  ...   \n",
+       "2813  San Francisco 49ers  NaN    6   December 29  8:20PM       Seahawks  ...   \n",
+       "2814     Tennessee Titans  NaN    6   December 29  4:25PM         Texans  ...   \n",
+       "2815        Chicago Bears  NaN    6   December 29  1:00PM        Vikings  ...   \n",
+       "\n",
+       "     home_team_wins_last_3 away_team_wins_last_3 pts_home  pts_away  yds_home  \\\n",
+       "0                      NaN                   NaN        7        12       307   \n",
+       "1                      NaN                   NaN       20        34       268   \n",
+       "2                      NaN                   NaN       21        34       450   \n",
+       "3                      NaN                   NaN       16        20       299   \n",
+       "4                      NaN                   NaN       14        12       365   \n",
+       "...                    ...                   ...      ...       ...       ...   \n",
+       "2811                   1.0                   2.0       31        24       424   \n",
+       "2812                   3.0                   1.0       28        10       304   \n",
+       "2813                   1.0                   2.0       21        26       348   \n",
+       "2814                   2.0                   1.0       14        35       301   \n",
+       "2815                   2.0                   1.0       19        21       300   \n",
+       "\n",
+       "      yds_away  turnovers_home  turnovers_away   day_sin  day_cos  \n",
+       "0          302               2               0 -0.781831  0.62349  \n",
+       "1          310               2               0 -0.781831  0.62349  \n",
+       "2          462               0               0 -0.781831  0.62349  \n",
+       "3          203               2               1 -0.781831  0.62349  \n",
+       "4          228               2               0 -0.781831  0.62349  \n",
+       "...        ...             ...             ...       ...      ...  \n",
+       "2811       393               0               5 -0.781831  0.62349  \n",
+       "2812       168               2               2 -0.781831  0.62349  \n",
+       "2813       398               0               0 -0.781831  0.62349  \n",
+       "2814       467               1               0 -0.781831  0.62349  \n",
+       "2815       337               3               1 -0.781831  0.62349  \n",
+       "\n",
+       "[2816 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "332c549e",
    "metadata": {},
    "source": [
@@ -1147,7 +1626,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "master_env",
    "language": "python",
    "name": "python3"
   },
@@ -1161,7 +1640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
